fix(view): fix panel menu view on dark mode

--- a/src/styles/includes/dark.scss
+++ b/src/styles/includes/dark.scss
@@ -11,7 +11,7 @@ body.dark {
 
         #panel-menus button {
             &:hover,
-            .active {
+            &.active {
                 background: $darkbg;
             }
         }
